@@ -5,15 +5,18 @@ DIST mysql-5.0.60.tar.gz 27918671 RMD160 3d7d35e585f96d0729a38146cdb6fdf7308f87b
 DIST mysql-5.0.70.tar.gz 28589887 RMD160 3b3e654518003ddecc0b50afb608dab8754adb3b SHA1 8e0cc8f8ebffad8340f40b9a57dc01a9c5c3b5d7 SHA256 d6532f623cb47100758f554b04ca14d848e3381e9848db899cc6b32dd555b325
 DIST mysql-5.0.72.tar.gz 28710411 RMD160 0f9ad480ceb71af9d4e61ca472aa86a270565c75 SHA1 840c2b30e67b05867e66ee2a9ff9a142d4aabb42 SHA256 784a84b757b581fceb19d4740bbc0ec7b1372ff05efcbffe800286e24e326051
 DIST mysql-5.0.76.tar.gz 34414933 RMD160 acf98699c8d2c67f649d92b579907e8a4155aa94 SHA1 1f4bd01053bcf9c5c417e94bf99938276f6faa17 SHA256 ee4f15cf6f909ab2888f504877af145f2f84a366dbc06a8239045356311dff6d
+DIST mysql-5.0.83.tar.gz 35937401 RMD160 b6a525c865322fb1b796c07d306193a98de37c27 SHA1 5e831a12f1dab902e4af6e3cf495bddf6fa1fd33 SHA256 f7d3ac87693de8d0f4ddf457c268107b0d538a0b577f1c2596a8a28eb0bdd1c4
 DIST mysql-extras-20080601.tar.bz2 106566 RMD160 6e6470c8908e0e944ff8a71886db6e80af9465b0 SHA1 a462cf953452283bafd785ac9c109104b673bbd1 SHA256 de7bb63eb6de3b7b14d8d65b5248258b18e00524eac08dddf373f98361402ed9
 DIST mysql-extras-20081129-1041Z.tar.bz2 110743 RMD160 e159b801785109860325e44fc76b96fc940f012f SHA1 38db6b3328cf6523e076f23d9cf43ae76c74678a SHA256 4975eec32d2359924fd7e40b44d8764b6511ca6a62f71611a991427409ef5202
 DIST mysql-extras-20090211-1206Z.tar.bz2 111217 RMD160 243e1ace611f07f30c148c272d064fc916a47821 SHA1 2ba4041b6749575380fda0e6ae551284aaefcbfc SHA256 9a9a40aac283059492b10ff3dc059a90990dc3b7963405054ead1c750d63d081
 DIST mysql-extras-20090412-0009Z.tar.bz2 256637 RMD160 da0e1bbc6db770171e34c2f58e35f5417ed22f0a SHA1 61c2a15ac6cb34ec2c4b83ac314f6c5d1d3b2ab3 SHA256 9a615dceed183648b1ee83dafbdadfd735a8db312032a871934b63dd847adc42
+DIST mysql-extras-20090706-1838Z.tar.bz2 496474 RMD160 c7a51d7adc21f3befe29641e74a66463fcef01cc SHA1 50831fc861b1c68a08a912df560d920435622630 SHA256 599bf226de7c33e7f01a78f7171f8677a5b38a5b19d371f3a45ba868cb43aec7
 EBUILD mysql-5.0.60-r1.ebuild 3419 RMD160 3536d5be86d8c9a108a6acaac2b4f82b74dc03c9 SHA1 74ca465acfd85e95ee4a48a283a899b369aa1dfb SHA256 a0b083bb9bb9e93aee0b33adaa79d3226efcb997dd2b69063e78f0613c575059
 EBUILD mysql-5.0.70-r1.ebuild 4047 RMD160 87e4d43aab458f5049877d7b76bb5d19e6645c71 SHA1 9c6f88958afa16aa431ef25d3d4518a92b21d2eb SHA256 a258beb0acdf1b978602ad4a273a7adf34bf8c18cf5c2b54895585e7f4f2993a
 EBUILD mysql-5.0.70.ebuild 4039 RMD160 c976851d715705d60eb21fe408f7a4b09ff0c29f SHA1 c317f5587d7c55157f55c0b73060bfbedd8965e5 SHA256 065658f4fb9858fc27011fffbce57b3b37e2703f4d7b2db4a812b5d3635c3ff0
 EBUILD mysql-5.0.72-r1.ebuild 4302 RMD160 02f282a93d5476b0637ce11e03a1236cafd3f5f6 SHA1 ecc2726c7a70eeadb2c30ceb899ab3928d348ba6 SHA256 936b9a69e16c9585c79b1b49e77959d30994fa5db979520f698a36681272f328
 EBUILD mysql-5.0.76-r1.ebuild 4852 RMD160 8db9a9ad8bb9673a1e837e6c0149aa0bff4a7939 SHA1 fcb082179cf321969a30e4a832a31f8fbc114f00 SHA256 baf0e4d359a81f034fb5171a028d3ac1bed758f22825deac578f575bb999716f
 EBUILD mysql-5.0.76.ebuild 4851 RMD160 0e42219acdbb873af369772e7dc2dca2d1eb9a43 SHA1 88373343f6fe3137086915c29c7f3193e5e0c05e SHA256 c7df0978bb12119a2b4688287299aaa2bffdbafb5489545991db97d02768e541
-MISC ChangeLog 93265 RMD160 e6f8fa63fc0ad07afbaf976ab32317f69daa1294 SHA1 3d2cd5a49e852add7fd2d501c7c25fa3d8361559 SHA256 4aa9cc8b185861bc037fc40941f3977d6202dc15ca268478b606df6bdf0f3d2d
-MISC metadata.xml 746 RMD160 24dadde02462666d5b05608b73a87094de82af1a SHA1 596f0628975fc92ff1cb4d665f7fa5d7eac04505 SHA256 070b3c63ddedff2023166fd0f82bd9dc6a691079c10a6ee968ca7b28e97af5a6
+EBUILD mysql-5.0.83.ebuild 4771 RMD160 d105826a69c5f3a52c003c0906885ab5c48d4897 SHA1 7a5dc36a0d9687c16cd8a2c63c541c0394011403 SHA256 91b1027dc4e2ce71c09daacae4cbdb1c9f8aea44443339dbc5588782e45f6d91
+MISC ChangeLog 93560 RMD160 aed909217060a3f8f4ebc5bad40c73ec68eb8d02 SHA1 094ac6939e4d285cc9a65a3bd489a467c7b0c4c2 SHA256 afe9da58bdc9438f929dcf1da932571a792442861d9a34bc52aee3ee074a2e30
+MISC metadata.xml 918 RMD160 ee023d3ae746d0d29ac387c1c87f3f8dec7c9568 SHA1 10ef755d319f93d02de705b3158f4e73aca28af4 SHA256 046a9880921c49fea8861a819c1afd27fc5a873dea28b80b040da2733e029c47
