@@ -12,5 +12,7 @@
     </flag>
   <flag name='minimal'>Install client programs only, no server</flag>
   <flag name='raid'>Deprecated option, removed in the 5.0 series</flag>
+  <flag name='community'>Enables the community features from upstream.</flag>
+  <flag name='profiling'>Add support for statement profiling (requires USE=community).</flag>
 </use>
 </pkgmetadata>
